# concept-nodes

./: .gitignore  .gitmodules  README.md  agent.py  audio.py  chat_history.py  listen_for_keyword.py  main.py  map_query.py  pyproject.toml  vis_with_viser.py  visualizer.py
arcs/: __init__.py  arc_state.py  generate_arcs.py
arcs/conf_arcs/: arcs.yaml
arcs/conf_arcs/filter/: blacklist.yaml  default.yaml  limited.yaml  whitelist.yaml
arcs/conf_arcs/generation/: dummy.yaml  langchain.yaml
arcs/conf_arcs/paths/: local.yaml  (+1 more)
assets/pcd/: _classes.json  cloud.json
concept_graphs/: floor_segment.py  torch_utils.py  utils.py
concept_graphs/inference/: BaseMapEngine.py  MapQueryEngine.py
concept_graphs/mapping/: Object.py  ObjectMap.py  Segment.py  utils.py
concept_graphs/perception/: PerceptionPipeline.py
concept_graphs/viz/: segmentation.py  video_utils.py
concept_graphs/vlm/: OpenAICaptioner.py  OpenAIVerifier.py
conf/: main.yaml  map_query.yaml  strayscanner.yaml  strayscanner_outside.yaml  visualizer.yaml
conf/agent/: agent.yaml
conf/algo/: CGDetector.yaml  MapReceptacles.yaml  VerifyObjects.yaml
conf/dataset/: Perpetua.yaml  SemiStaticSim.yaml  StrayScannerRGBD.yaml
conf/inference/: MapQueryEngine.yaml  QueryObjects.yaml  QueryReceptacles.yaml
conf/paths/: local.yaml  paths.yaml
conf/segmentation/: SAM3.yaml  YoloMobileSAM.yaml
conf/vlm/: OpenAIVerifier.yaml
vis/: arcs_gui.py  box_annotator.py  cg_dataclass.py  gui_fsm.py  notification_manager.py  queries_and_chat.py  vis_with_viser.py
vis/docs/: CLEANUP_TODOs.md  MULTI_SELECT_BOXES.md
(+18 files in other folders)
